Introduce PlanExecutor and move the fan-out, merge and scan routing into it
PlanExecutor traverses the coordinator's MergeExec over FanOutExec
tree: the fan-out node runs as the per-node transport requests
(FragmentFanOut, moved from the coordinator action) and the merge node
as the reduce of the gathered responses (MergeReducer, the moved merge
state with the hit merge and totalHits composition). On the fragment
side the executor owns the planner facing resolution the transport
action used to hand-roll: the planned full text / knn query, the
planned sorted page, the aggregation pushdown plan and the
matched-count route with its count-only scans. The Lucene collector
and aggregator bodies, the transport payloads and the reader lifecycle
stay with the transport actions. findCancelled moves to
LanceCancellation so both sides share it. No runtime behaviour
changes; the moved code is verbatim apart from the count route taking
ContextIndexSearcher instead of the package-private searcher type.

Signed-off-by: Sotaro Hikita <bering1814@gmail.com>